ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__LH_Queue__c/LH__LH_Queue__c.object-meta.xml
<CustomObject>
    <description>Management of overflow asynchronous jobs in Lookup Helper.</description>
    <label>Lookup Queue</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Lookup Helper Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>