ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__LH_Queue__c/fields/LH__Batch_Class__c.field-meta.xml
<CustomField>
    <fullName>LH__Batch_Class__c</fullName>
    <label>Batch Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>