ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__LH_Queue__c/fields/LH__Status__c.field-meta.xml
<CustomField>
    <fullName>LH__Status__c</fullName>
    <label>Status</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>