ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__LH_Queue__c/fields/LH__Step_Class__c.field-meta.xml
<CustomField>
    <fullName>LH__Step_Class__c</fullName>
    <label>Step Class</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>