ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__LH_Queue__c/fields/LH__Step_JSON__c.field-meta.xml
<CustomField>
    <fullName>LH__Step_JSON__c</fullName>
    <label>Step JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>